st/mesa: fix mapping of zero-sized buffer objects

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=31934